--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2020.01.30:
+* new: x86 library build on Linux Mint 18.3 x64
+
 2020.01.24:
 * changed: cutted off the version reference from the readme file as may change frequently
 
