--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2020.04.12:
+* changed: changes store retarget to branches instead of the trunk to be able to apply changes to multiple versions
+
 2020.02.10:
 * changed: readme update
 
